# nxdk_cmake_template

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/modules/: PrebuildNXDK.cmake
src/: CMakeLists.txt  main.cpp
